--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#1E2FB6</color>
     <color name="colorPrimaryDark">#2196F3</color>
     <color name="colorAccent">#03A9F4</color>
+    <color name="white">#ffffff</color>
+    <color name="bluegrey">#2B2D42</color>
 </resources>
