--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="toolbar">57dp</dimen>
     <dimen name="marginBottom">16dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+
 </resources>
