--- a/app/src/main/res/layout/activity_detail_tv.xml
+++ b/app/src/main/res/layout/activity_detail_tv.xml
@@ -29,97 +29,98 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_height="match_parent"
         >
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_poster"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/bluegrey"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/dtl_title"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_weight="1.5"
+            android:background="@color/white"
+            app:cardBackgroundColor="@color/bluegrey"
+            app:cardCornerRadius="0dp"
+            app:cardElevation="1dp"
+            app:cardMaxElevation="2dp"
+            app:layout_constraintBottom_toTopOf="@+id/dtl_tahun"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.cardview.widget.CardView
+            <ImageView
+                android:id="@+id/dtl_thumbail"
                 android:layout_width="150dp"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:layout_weight="1.5"
-                android:background="@color/white"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="1dp"
-                app:cardMaxElevation="2dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:scaleType="centerCrop"
+                android:src="@drawable/poster_venom" />
 
-                <ImageView
-                    android:id="@+id/dtl_thumbail"
-                    android:layout_width="150dp"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/poster_venom" />
+        </androidx.cardview.widget.CardView>
 
-            </androidx.cardview.widget.CardView>
-            <TextView
-                android:id="@+id/dtl_release"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textSize="12sp"
-                android:layout_marginBottom="16dp"
-                android:textColor="@android:color/white"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"/>
-        </LinearLayout>
+
+        <TextView
+            android:id="@+id/dtl_tahun"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:background="@color/bluegrey"
+            android:gravity="center"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/dtl_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cv_poster" />
 
         <TextView
             android:id="@+id/dtl_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="8dp"
             android:paddingStart="2dp"
             android:paddingTop="1dp"
-            android:layout_marginStart="5dp"
             android:paddingEnd="2dp"
             android:paddingBottom="1dp"
             android:text="@string/title"
             android:textColor="@android:color/black"
             android:textSize="19sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/dtl_release"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/dtl_tahun" />
+
         <TextView
-            android:id="@+id/dtl_tahun"
-            android:layout_below="@id/dtl_title"
+            android:id="@+id/dtl_release"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:layout_marginTop="10dp"
+            android:layout_below="@id/dtl_title"
             android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="3dp"
-            android:textColor="@android:color/black"
-            android:text="@string/subtile"
-            android:paddingTop="1dp"
-            android:paddingBottom="1dp"
+            android:layout_marginBottom="8dp"
             android:paddingStart="2dp"
+            android:paddingTop="1dp"
+            android:paddingEnd="2dp"
+            android:paddingBottom="1dp"
+            android:text="@string/subtile"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/dtl_genre"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dtl_title"
-            android:paddingEnd="2dp"/>
+            app:layout_constraintTop_toBottomOf="@id/dtl_title" />
 
         <TextView
             android:id="@+id/dtl_genre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:paddingTop="8dp"
             android:paddingEnd="8dp"
@@ -127,9 +128,10 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:textColor="@android:color/black"
             android:textSize="12sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/dtl_summary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dtl_tahun" />
+            app:layout_constraintTop_toBottomOf="@+id/dtl_release" />
 
         <TextView
             android:id="@+id/dtl_summary"
