--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -21,12 +21,24 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
     android:layout_width="match_parent"
     android:fillViewport="true"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:background="@color/bluegrey"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="80dp"
+            android:background="@drawable/background_detail"
+            app:elevation="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
@@ -64,7 +76,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:paddingEnd="2dp"
             android:paddingBottom="1dp"
             android:text="@string/title"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="19sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/dtl_tahun"
@@ -85,7 +97,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:paddingEnd="2dp"
             android:paddingBottom="1dp"
             android:text="@string/subtile"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +106,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
         <TextView
-            android:id="@+id/dtl_release"
+            android:id="@+id/dtl_vote"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
