--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -18,23 +18,16 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
            />
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardMaxElevation="2dp"
-            app:cardElevation="1dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="5dp"
-            app:cardBackgroundColor="#A6000000"
-            android:layout_alignParentStart="true"
-            app:cardCornerRadius="10dp">
+
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
                 android:paddingStart="20dp"
                 android:paddingEnd="10dp"
+                android:background="@drawable/background_item"
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/tv_title"
@@ -55,7 +48,7 @@
                     android:textSize="12sp"
                     />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+
 
 
     </RelativeLayout>
