--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -77,7 +77,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:paddingStart="2dp"
             android:paddingTop="1dp"
             android:paddingEnd="2dp"
@@ -86,30 +85,27 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:textColor="@android:color/white"
             android:textSize="19sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/dtl_tahun"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardView2"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/dtl_tahun"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/dtl_title"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:paddingStart="2dp"
             android:paddingTop="1dp"
             android:paddingEnd="2dp"
             android:paddingBottom="1dp"
             android:text="@string/subtile"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cardView2"
-            app:layout_constraintTop_toBottomOf="@+id/dtl_title" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
 
         <TextView
@@ -128,7 +124,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+            app:layout_constraintTop_toBottomOf="@+id/dtl_tahun" />
 
 <!--        <TextView-->
 <!--            android:id="@+id/dtl_genre"-->
