--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -63,6 +63,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 
             <ImageView
                 android:id="@+id/dtl_thumbail"
+                android:contentDescription="@string/poster"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
@@ -89,23 +90,36 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             app:layout_constraintStart_toEndOf="@+id/cardView2"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.like.LikeButton
+            android:id="@+id/favorit_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="16dp"
+            app:icon_size="30dp"
+            app:liked="false"
+            app:anim_scale_factor="2"
+            app:like_drawable="@drawable/ic_favorite"
+            app:unlike_drawable="@drawable/ic_favorite_off"
+            android:layout_marginTop="8dp"
+            app:icon_type="heart"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
         <TextView
             android:id="@+id/dtl_tahun"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/dtl_title"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:paddingStart="2dp"
             android:paddingTop="1dp"
             android:paddingEnd="2dp"
             android:paddingBottom="1dp"
-            android:text="@string/subtile"
             android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+            app:layout_constraintTop_toBottomOf="@+id/favorit_button" />
 
 
         <TextView
