--- a/app/src/main/res/layout/activity_detail_tv.xml
+++ b/app/src/main/res/layout/activity_detail_tv.xml
@@ -44,6 +44,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         <ImageView
             android:id="@+id/dtl_thumbail"
             android:layout_width="150dp"
+            android:contentDescription="@string/poster"
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
