--- a/app/src/main/res/layout/item_tv_show.xml
+++ b/app/src/main/res/layout/item_tv_show.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:contentDescription="@string/poster"
             android:id="@+id/thumbail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
