--- a/app/src/main/res/layout/item_favorit.xml
+++ b/app/src/main/res/layout/item_favorit.xml
@@ -20,6 +20,7 @@
             android:id="@+id/iv_thumbail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/poster" />
     </androidx.cardview.widget.CardView>
 
@@ -29,6 +30,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:paddingStart="2dp"
         android:paddingTop="1dp"
