--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<group android:menuCategory="container">
+
+<group android:menuCategory="container"
+    android:id="@+id/menu_container">
+    <item android:id="@+id/action_search"
+        android:title="@string/search_title"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
     <item android:id="@+id/action_change_language"
         android:title="@string/title_change_language"
+        app:showAsAction="never"/>
+    <item android:id="@+id/action_settings_reminder"
+        android:title="@string/title_settings_reminder"
         app:showAsAction="never"/>
 </group>
 </menu>
